--- a/assert.html
+++ b/assert.html
@@ -184,7 +184,7 @@ function Asserter(name) {
 				handler.init(name);
 				handlers.push(handler);
 			} else {
-				throw new AssertionError("Handler must be of the type AssertionHandler");
+				throw new AssertionError("Handler must be of the type AssertionHandler.");
 			}
 		} 
 	} else {
